# referee-ally

./: A experiência do usuário dentro do siste.sty  Ferramenta Integrada de Gestão de Submis.ini  Procfile  README.md  db.sqlite3  index.html  manage.py  pyproject.toml  railway.json  requirements.txt  start.sh  tailwind.config.ts  test_app.py  test_db.py
backend-django/: manage.py  railway.json  requirements.txt
backend-django/apps/core/: admin.py  models.py
backend-django/juridico_rankings/: settings.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py
frontend-react-src/: index.css
frontend-react-src/components/dashboard/: UpcomingDeadlines.tsx
frontend-react-src/components/layout/: Sidebar.tsx
frontend-react-src/pages/: Submissions.tsx
juridico_rankings/: asgi.py  settings.py  settings_production.py  urls.py  wsgi.py
referee_ally/: celery.py  settings.py
src/: App.tsx
src/components/dashboard/: QuickActions.tsx  RecentSubmissions.tsx  StatsCards.tsx
src/components/layout/: Header.tsx
src/pages/: Index.tsx  Referees.tsx  SubmissionDetail.tsx
submissoes/: admin.py  models.py
submissoes/migrations/: 0001_initial.py
temp-railway-setup/: models_preparados.py
