[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "referee-ally-backend"
version = "0.1.0"
description = "Django backend for Referee Ally system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Django==5.1.2",
    "djangorestframework==3.14.0",
    "django-cors-headers==4.3.1",
    "psycopg2-binary==3.2.10",
    "dj-database-url==2.1.0",
    "gunicorn==23.0.0",
    "whitenoise==6.7.0",
    "amqp==5.3.1",
    "celery==5.4.0",
    "redis==5.2.0",
    "django-celery-beat==2.7.0",
    "django-timezone-field==7.0"
]
